@@ -22,10 +22,6 @@
  * The file defines the main function and several searching functions.
  */
 
-#if defined HAVE_NFTW
-#include <ftw.h>
-#endif
-
 #include <stdio.h>
 #include "search.h"
 #include "ErrorLog.h"
@@ -112,11 +108,7 @@ int main(int argc, char *argv[]){
 #endif
 	    }
 	    // Do the file tree walk.
-#if defined HAVE_NFTW
-            if (nftw(thisDir->dir, onWalk, 20, FTW_ACTIONRETVAL | FTW_PHYS) == -1)
-		// This is not fatal since we can try on any other folders we were supplied.
-                log_event(ERROR, "Directory walk for %s failed!", thisDir->dir);
-#elif defined (HAVE_DIRENT_H) || defined (HAVE_IO_H)
+#if defined (HAVE_DIRENT_H) || defined (HAVE_IO_H)
 	    /** Both dirent- and io- based searches have a wrapper function of the same name. */
 	    search_folder(thisDir->dir);
 #else
